typescript/checker/tests/conformance/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement1.ts.stderr
error: Unexpected token Some(RBrace)
 --> $DIR/tests/conformance/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement1.ts:4:3
  |
4 |   }
  |   ^

